--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -76,9 +76,7 @@
                 <button class="btn btn-outline-danger" onclick="confirmDelete('Are you sure you want to delete this product?', 'delete-product-{{ product.id }}')">
                   <i class="bi bi-trash"></i>
                 </button>
-                <form id="delete-product-{{ product.id }}" action="{{ url_for('delete_product', product_id=product.id) }}" method="POST" class="d-none">
-                  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                </form>                
+                <form id="delete-product-{{ product.id }}" action="{{ url_for('delete_product', product_id=product.id) }}" method="POST" class="d-none"></form>
               </div>
             </td>
           </tr>
@@ -126,9 +124,7 @@
                     <button class="btn btn-outline-danger btn-sm" onclick="confirmDelete('Are you sure you want to delete this category?', 'delete-category-{{ category.id }}')">
                       <i class="bi bi-trash"></i>
                     </button>
-                    <form id="delete-category-{{ category.id }}" action="{{ url_for('delete_category', category_id=category.id) }}" method="POST" class="d-none">
-                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                    </form>
+                    <form id="delete-category-{{ category.id }}" action="{{ url_for('delete_category', category_id=category.id) }}" method="POST" class="d-none"></form>
                   </div>
                 </td>
               </tr>
@@ -175,9 +171,7 @@
                     <button class="btn btn-outline-danger btn-sm" onclick="confirmDelete('Are you sure you want to delete this supplier?', 'delete-supplier-{{ supplier.id }}')">
                       <i class="bi bi-trash"></i>
                     </button>
-                    <form id="delete-supplier-{{ supplier.id }}" action="{{ url_for('delete_supplier', supplier_id=supplier.id) }}" method="POST" class="d-none">
-                      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                    </form>
+                    <form id="delete-supplier-{{ supplier.id }}" action="{{ url_for('delete_supplier', supplier_id=supplier.id) }}" method="POST" class="d-none"></form>
                   </div>
                 </td>
               </tr>
@@ -194,7 +188,6 @@
     </div>
   </div>
 </div>
-              
 
 <!-- Category Modal -->
 <div class="modal fade" id="categoryModal" tabindex="-1" aria-labelledby="categoryModalLabel" aria-hidden="true">
